[package]
name = "cache_streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.7"
bytes = "1.8"
chrono = "0.4"
env_logger = "0.11"
futures = "0.3"
headers = "0.4"
hex = "0.4"
http = "1.1"
intrusive-collections = "0.9"
intrusive-lru-cache = "0.1.1"
log = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["stream"] }
ring = "0.16"
tokio = { version = "1", features = ["full"] }
url = "2.3"
