[package]
name = "cache_streamer"
version = "0.1.0"
edition = "2021"
description = "A simple caching reverse proxy for HTTP"

[dependencies]
axum = "0.7"
cache_streamer_http = { path = "libs/cache_streamer_http" }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
