[package]
name = "cache_streamer"
version = "0.1.0"
edition = "2021"
description = "A simple caching reverse proxy for HTTP"

[dependencies]
axum = "0.7"
cache_streamer_http = { path = "libs/cache_streamer_http" }
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
