[package]
name = "cache_streamer_http"
version = "0.1.0"
edition = "2021"

[dependencies]
cache_streamer_lib = { path = "../cache_streamer_lib" }
chrono = "0.4"
futures = "0.3"
headers = "0.4"
http = "1.2"
range_header = { path = "../range_header" }
reqwest = { version = "0.12", features = ["stream"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
